--- a/react-social-ui/src/stories/Introduction.stories.mdx
+++ b/react-social-ui/src/stories/Introduction.stories.mdx
@@ -8,7 +8,7 @@ import Plugin from './assets/plugin.svg';
 import Repo from './assets/repo.svg';
 import StackAlt from './assets/stackalt.svg';
 
-<Meta title='Example/Introduction' />
+<Meta title='Introduction' />
 
 <style>{`
   .subheading {
@@ -116,7 +116,20 @@ import StackAlt from './assets/stackalt.svg';
 
 # Welcome to geoLARP devOps
 
-On the shoulders of giants, LamaDev started the core code for the social network and Bret Fischer showed me how to put it in containers for production.
+On the shoulders of giants,  
+[Lama Dev](https://www.youtube.com/playlist?list=PLj-4DlPRT48lXaz5YLvbLC38m25W9Kmqy 'React.js social media application design tutorial. Create social media project using React functional components and React Hooks.')
+started the core code for the social network  
+[Bret Fisher](https://www.bretfisher.com/ "I built this course because I live and breathe Docker containers, and I've enjoyed using Node.js since 2012. They work great together, and I'll show you how!") showed me how to put it in containers for production.
+
+Most tutorials start with a disclaimer of, **"do not do this in production"**.  
+leading to the obvious next question, **"then what do I do in production?"**
+
+So I've taken what I've learned and put it into a containers.
+Open for peer review, and I'll show you how I've put it in to production.
+
+The database is still in development, and maybe randomly deleted.
+So if you're account was removed before launch it isn't personal, your email should be elligible to sign up again.
+I'd like to add an **RBAS** **(role based access system)** A division of users into groups of gamemaster, admin, and player.
 
 Storybook helps you build UI components in isolation from your app's business logic, data, and context.
 That makes it easy to develop hard-to-reach states. Save these UI states as **stories** to revisit during development, testing, or QA.
