Lama Dev StoryBook

--- a/react-social-ui/src/stories/Introduction.stories.mdx
+++ b/react-social-ui/src/stories/Introduction.stories.mdx
@@ -114,7 +114,7 @@ import StackAlt from './assets/stackalt.svg';
   
 `}</style>
 
-# Welcome to geoLARP devOps
+# geoLARP devOps
 
 On the shoulders of giants,  
 [Lama Dev](https://www.youtube.com/playlist?list=PLj-4DlPRT48lXaz5YLvbLC38m25W9Kmqy 'React.js social media application design tutorial. Create social media project using React functional components and React Hooks.')
